[tool.poetry]
name = "advent-of-code-2021"
version = "0.1.0"
description = ""
authors = ["re76 <rernst76@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ipython = "^7.30.0"
numpy = "^1.21.4"
pandas = "^1.3.4"
requests = "^2.26.0"
ipykernel = "^6.6.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
